tests-system/rbt-tuple-separators-all-or-none/output
separator @
^^^^^^^^^ rbt-tuple-separators-all-or-none/foo.rsl:6: error: either all fields must be separated, or none
Processed 1 model, and 0 requirement files and found 1 error
